# imgdiff

./: .gitignore  .gitmodules  README.md  pyproject.toml  setup.py
imgdiff/: __main__.py  sixel.py
