[build-system]
requires = ['setuptools', 'setuptools_scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'imgdiff'
dependencies = [
	'numpy',
	'sixelpack @ git+https://github.com/trnciii/sixelpack#v1.2',
]
dynamic = ['version']

[tools.setuptools.dynamic]
version = {attr = 'imgdiff._v.version'}

[tool.setuptools_scm]
write_to = 'imgdiff/_v.py'

[project.scripts]
imgdiff = 'imgdiff.__main__:main'
